src/objects/Case_Note__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMH_ID__c</fullName>
        <label>CMH ID</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Notes</relationshipLabel>
        <relationshipName>Case_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Note__c</fullName>
        <label>Last Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Member_Practice_Phone__c</fullName>
        <label>Member Practice Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Body__c</fullName>
        <label>Note Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <label>Primary Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Note</label>
    <listViews>
        <fullName>All_Case_Notes</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Note_Body__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Case Notes</label>
    </listViews>
    <nameField>
        <displayFormat>CaseNote {00000}</displayFormat>
        <label>Case Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>